log
Fri 05 May 2023 03:47:29 AM UTC: 
 tests:  0|5
total_score: 0/70
a006e13
Fri 05 May 2023 04:39:19 AM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|5
total_score: 0/70
7148469
Fri 05 May 2023 12:55:15 PM UTC: 
 sudoku.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:17: error: invalid use of incomplete typedef ‘List’
   68 |             list->size++;
      |                 ^~
Compilation failed
cc622a7
Fri 05 May 2023 12:57:34 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:21: error: ‘i’ may be used uninitialized [-Werror=maybe-uninitialized]
   58 |     novo->sudo[i][j]=1;
      |     ~~~~~~~~~~~~~~~~^~
sudoku.c:58:21: error: ‘j’ may be used uninitialized [-Werror=maybe-uninitialized]
cc1: all warnings being treated as errors
Compilation failed
1bdbb5c
Fri 05 May 2023 12:58:25 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8bec724
Fri 05 May 2023 01:01:06 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
9ce9b3a
Fri 05 May 2023 01:06:06 PM UTC: 
 sudoku.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  0|0
c154f81
Fri 05 May 2023 01:06:55 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
1db4005
Fri 05 May 2023 01:11:12 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
9426024
Fri 05 May 2023 01:12:15 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
f851123
Fri 05 May 2023 01:12:42 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d53cd3e
Fri 05 May 2023 01:12:53 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0944243
Fri 05 May 2023 01:16:12 PM UTC: 
 sudoku.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
17bcdd9
Fri 05 May 2023 01:18:43 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
8aa624a
Fri 05 May 2023 01:21:17 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
fb98c66
Sat 06 May 2023 06:54:55 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4dcdd8a
Sat 06 May 2023 07:04:58 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
2b4f6d8
Sat 06 May 2023 07:12:05 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
beca8af
